--- a/package.json
+++ b/package.json
@@ -20,11 +20,12 @@
     "@angular/platform-browser-dynamic": "^15.2.0",
     "@angular/router": "^15.2.0",
     "bootstrap": "^5.3.3",
+    "login": "^0.8.0",
+    "netlify": "^13.1.14",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.12.0"
   },
-
   "devDependencies": {
     "@angular-devkit/build-angular": "^15.2.0",
     "@angular/cli": "~15.2.0",
